--- a/package.json
+++ b/package.json
@@ -4,20 +4,30 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "parcel src/index.html --no-source-maps --target default --dist-dir ./build",
-    "build": "parcel build src/index.html --no-source-maps --target default --dist-dir ./build",
+    "dev": "parcel src/index.hbs",
+    "build": "parcel src/build index.hbs",
     "watch": "parcel watch"
   },
   "keywords": [],
   "author": "Bulat A.",
   "license": "ISC",
   "devDependencies": {
+    "@anikin/parcel-transformer-handlebars": "^1.0.9",
     "@parcel/transformer-inline-string": "^2.8.2",
     "parcel": "^2.8.2"
   },
   "targets": {
     "default": {
-      "sourceMap": false
+      "sourceMap": false,
+      "engines": {
+        "browsers": ">=50%"
+      }
     }
+  },
+  "engines": {
+    "node": "16.19.0"
+  },
+  "dependencies": {
+    "handlebars": "^4.7.7"
   }
 }
