--- a/package.json
+++ b/package.json
@@ -2,32 +2,21 @@
   "name": "webchatapp",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
   "scripts": {
-    "dev": "parcel src/index.hbs",
-    "build": "parcel src/build index.hbs",
-    "watch": "parcel watch"
+    "start": "parcel src/index.html --no-cache",
+    "build": "parcel build src/index.html --no-cache"
   },
   "keywords": [],
   "author": "Bulat A.",
   "license": "ISC",
   "devDependencies": {
-    "@anikin/parcel-transformer-handlebars": "^1.0.9",
-    "@parcel/transformer-inline-string": "^2.8.2",
-    "parcel": "^2.8.2"
-  },
-  "targets": {
-    "default": {
-      "sourceMap": false,
-      "engines": {
-        "browsers": ">=50%"
-      }
-    }
-  },
-  "engines": {
-    "node": "16.19.0"
+    "parcel": "2.8.2",
+    "@parcel/transformer-sass": "2.8.2",
+    "parcel-transformer-hbs": "1.0.4"
   },
   "dependencies": {
-    "handlebars": "^4.7.7"
+    "express": "^4.18.2",
+    "handlebars": "^4.7.7",
+    "node": "^19.4.0"
   }
 }
