--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "handlebars": "^4.7.7",
-    "node": "^19.4.0"
+    "handlebars": "^4.7.7"
   }
 }
