--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   "author": "Bulat A.",
   "license": "ISC",
   "devDependencies": {
-    "@parcel/transformer-sass": "2.8.2",
     "@parcel/transformer-inline-string": "2.8.2",
+    "@parcel/transformer-sass": "2.8.2",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
     "eslint": "8.32.0",
@@ -38,6 +38,7 @@
   },
   "dependencies": {
     "express": "4.18.2",
-    "handlebars": "4.7.7"
+    "handlebars": "4.7.7",
+    "nanoid": "^4.0.0"
   }
 }
