--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,19 @@
 {
   "compilerOptions": {
-    "outDir": "dist",
-    "target": "es2016",
+    "rootDir": "./src",
+    "outDir": "./dist",
+    "target": "es2017",
     "declaration": false,
     "module": "commonjs",
     "strictNullChecks": true,
     "sourceMap": true,
     "noImplicitAny": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "skipLibCheck": true,
+    "typeRoots": [
+      "node_modules/@types",
+      "typings/index.d.ts",
+    ]
   }
 }
