--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,31 +1,14 @@
 {
+    "extends": ["eslint:recommended"],
+    "parser": "@typescript-eslint/parser",
+    "plugins": ["@typescript-eslint"],
     "env": {
         "browser": true,
-        "es2021": true,
-        "node": true
+        "node": true,
+        "es6": true
     },
-    "extends": [
-        "eslint:recommended",
-        "airbnb",
-        "plugin:@typescript-eslint/recommended",
-        "plugin:prettier/recommended",
-        "prettier"
-    ],
-    "overrides": [
-    ],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-        "ecmaVersion": "latest",
-        "sourceType": "module"
-    },
-    "plugins": [
-        "@typescript-eslint",
-        "prettier"
-    ],
     "rules": {
-        "func-names": "off",
-        "import/no-unresolved": "off",
-        "import/extensions": "off"
+        "max-len": [2, 100],
+        "@typescript-eslint/no-unused-vars": 2
     }
-
 }
