--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,8 @@
     "strictNullChecks": true,
     "sourceMap": true,
     "noImplicitAny": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "skipLibCheck": true,
     "typeRoots": [
       "node_modules/@types",
