--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "parcel src/index.html --open --no-cache --port=3000",
+    "start": "parcel build src/index.html --no-cache && npm run server",
     "build": "parcel build src/index.html --no-cache",
     "dev": "parcel src/index.html --no-cache --open",
+    "server": "ts-node server.js",
     "lint": "node_modules/.bin/eslint .",
     "lint-fix": "node_modules/.bin/eslint . --fix",
     "format": "prettier --write \"src/**/*.ts\""
@@ -22,19 +23,20 @@
   "author": "Bulat A.",
   "license": "ISC",
   "devDependencies": {
-    "@parcel/transformer-inline-string": "2.8.2",
-    "@parcel/transformer-sass": "2.8.2",
+    "@parcel/transformer-inline-string": "2.8.3",
+    "@parcel/transformer-sass": "2.8.3",
     "@typescript-eslint/eslint-plugin": "5.49.0",
     "@typescript-eslint/parser": "5.49.0",
     "eslint": "8.32.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-prettier": "8.6.0",
     "eslint-plugin-prettier": "4.2.1",
-    "parcel": "2.8.2",
+    "parcel": "2.8.3",
     "parcel-transformer-hbs": "1.0.4",
     "prettier": "2.8.3",
     "stylelint": "14.16.1",
     "stylelint-scss": "4.3.0",
+    "ts-node": "10.9.1",
     "typescript": "4.9.4"
   },
   "dependencies": {
