--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "stylelint": "14.16.1",
     "stylelint-scss": "4.3.0",
     "ts-node": "10.9.1",
+    "stylelint-config-standard-scss": "6.1.0",
     "typescript": "4.9.4"
   },
   "dependencies": {
