--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "server": "ts-node server.js",
     "lint": "node_modules/.bin/eslint .",
     "lint-fix": "node_modules/.bin/eslint . --fix",
-    "format": "prettier --write \"src/**/*.ts\""
+    "format": "prettier --write \"src/**/*.ts\"",
+    "stylelint": "npx stylelint --fix '**/*.scss'"
   },
   "repository": {
     "type": "git",
