--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,10 +5,13 @@
     "env": {
         "browser": true,
         "node": true,
-        "es6": true
+        "es6": true,
+        "jest": true
     },
     "rules": {
         "max-len": [2, 120],
-        "@typescript-eslint/no-unused-vars": 2
+        "@typescript-eslint/no-unused-vars": 2,
+        "import/no-extraneous-dependencies": "off",
+        "@typescript-eslint/no-unused-vars": "warn"
     }
 }
