--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "node_modules/.bin/eslint .",
     "lint-fix": "node_modules/.bin/eslint . --fix",
     "format": "prettier --write \"src/**/*.ts\"",
-    "stylelint": "npx stylelint --fix '**/*.scss'"
+    "stylelint": "npx stylelint --fix '**/*.scss'",
+    "test": "jest --watch"
   },
   "repository": {
     "type": "git",
@@ -24,26 +25,42 @@
   "author": "Bulat A.",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "7.21.0",
+    "@babel/preset-env": "7.20.2",
+    "@babel/preset-typescript": "7.21.0",
     "@parcel/transformer-inline-string": "2.8.3",
     "@parcel/transformer-sass": "2.8.3",
+    "@testing-library/dom": "8.20.0",
+    "@testing-library/jest-dom": "5.16.5",
+    "@types/jest": "27.5.2",
+    "@types/sinon": "10.0.13",
     "@typescript-eslint/eslint-plugin": "5.49.0",
     "@typescript-eslint/parser": "5.49.0",
+    "dotenv": "16.0.3",
     "eslint": "8.32.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-prettier": "8.6.0",
     "eslint-plugin-prettier": "4.2.1",
+    "jest": "27.5.1",
+    "msw": "1.0.0",
     "parcel": "2.8.3",
     "parcel-transformer-hbs": "1.0.4",
     "prettier": "2.8.3",
     "stylelint": "14.16.1",
-    "stylelint-scss": "4.3.0",
-    "ts-node": "10.9.1",
     "stylelint-config-standard-scss": "6.1.0",
-    "typescript": "4.9.4"
+    "stylelint-scss": "4.3.0",
+    "sinon": "15.0.1",
+    "ts-node": "10.9.1",
+    "typescript": "4.9.4",
+    "webpack": "5.76.1",
+    "webpack-cli": "5.0.1",
+    "webpack-dev-server": "4.11.1",
+    "whatwg-fetch": "3.6.2"
   },
   "dependencies": {
     "express": "4.18.2",
     "handlebars": "4.7.7",
-    "nanoid": "4.0.0"
+    "regenerator-runtime": "0.13.11",
+    "uuid": "9.0.0"
   }
 }
