--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "parcel build src/index.html --no-cache && npm run server",
-    "build": "parcel build src/index.html --no-cache",
-    "dev": "parcel src/index.html --no-cache --open",
+    "start": "webpack && npm run server",
+    "build": "webpack",
+    "dev": "webpack serve",
     "server": "ts-node server.js",
     "lint": "node_modules/.bin/eslint .",
     "lint-fix": "node_modules/.bin/eslint . --fix",
@@ -24,6 +24,16 @@
   "keywords": [],
   "author": "Bulat A.",
   "license": "ISC",
+  "alias": {
+    "api": "./src/api",
+    "components": "./src/components",
+    "core": "./src/core",
+    "utils": "./src/utils",
+    "pages": "./src/pages",
+    "services": "./src/services",
+    "hocs": "./src/hocs",
+    "layout": "./src/layout"
+  },
   "devDependencies": {
     "@babel/core": "7.21.0",
     "@babel/preset-env": "7.20.2",
@@ -36,20 +46,27 @@
     "@types/sinon": "10.0.13",
     "@typescript-eslint/eslint-plugin": "5.49.0",
     "@typescript-eslint/parser": "5.49.0",
+    "clean-webpack-plugin": "4.0.0",
+    "css-loader": "^6.7.3",
     "dotenv": "16.0.3",
     "eslint": "8.32.0",
     "eslint-config-airbnb": "19.0.4",
     "eslint-config-prettier": "8.6.0",
     "eslint-plugin-prettier": "4.2.1",
+    "html-webpack-plugin": "5.5.0",
     "jest": "27.5.1",
+    "mini-css-extract-plugin": "^2.7.3",
     "msw": "1.0.0",
     "parcel": "2.8.3",
     "parcel-transformer-hbs": "1.0.4",
     "prettier": "2.8.3",
+    "sass-loader": "^13.2.0",
+    "sinon": "15.0.1",
+    "style-loader": "^3.3.1",
     "stylelint": "14.16.1",
     "stylelint-config-standard-scss": "6.1.0",
     "stylelint-scss": "4.3.0",
-    "sinon": "15.0.1",
+    "ts-loader": "9.4.2",
     "ts-node": "10.9.1",
     "typescript": "4.9.4",
     "webpack": "5.76.1",
@@ -60,6 +77,7 @@
   "dependencies": {
     "express": "4.18.2",
     "handlebars": "4.7.7",
+    "handlebars-loader": "1.7.3",
     "regenerator-runtime": "0.13.11",
     "uuid": "9.0.0"
   }
