--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,5 @@
 {
   "compilerOptions": {
-    "rootDir": "./src",
     "outDir": "./dist",
     "target": "es2017",
     "declaration": false,
@@ -13,6 +12,32 @@
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
+    "paths": {
+      "api": [
+        "./src/api"
+      ],
+      "core": [
+        "./src/core"
+      ],
+      "pages": [
+        "./src/pages"
+      ],
+      "components": [
+        "./src/components"
+      ],
+      "utils": [
+        "./src/utils"
+      ],
+      "services": [
+        "./src/services"
+      ],
+      "layout": [
+        "./src/layout"
+      ],
+      "hocs": [
+        "./src/hocs"
+      ],
+    },
     "typeRoots": ["node_modules/@types", "typings/index.d.ts"]
   }
 }
