--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "stylelint": "npx stylelint --fix '**/*.scss'",
     "test": "jest"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint-fix && npm run format && npm run stylelint && npm run test"
+    }
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/RafaOstrovskiy/middle.messenger.praktikum.yandex.git"
@@ -54,6 +59,7 @@
     "eslint-config-prettier": "8.6.0",
     "eslint-plugin-prettier": "4.2.1",
     "html-webpack-plugin": "5.5.0",
+    "husky": "^8.0.3",
     "jest": "27.5.1",
     "mini-css-extract-plugin": "^2.7.3",
     "msw": "1.0.0",
