--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "start": "webpack && npm run server",
-    "build": "webpack",
+    "build": "npm install && webpack",
     "dev": "webpack serve",
     "server": "ts-node server.js",
     "lint": "node_modules/.bin/eslint .",
